--- a/Front-end/Dockerfile
+++ b/Front-end/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx
 RUN rm -rf /usr/share/nginx/html/index.html
-RUN /etc/nginx/nginx.conf
+RUN rm -f /etc/nginx/nginx.conf
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY Code /usr/share/nginx/html/
